2026-02-13T01:14:10Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/21970793266 # 876
* notice: Stats Output Repository: https://github.com/andry81-stats/github-action-extensions--gh-stats/commits?branch=master&time_zone=utc&until=2026-02-13
* notice: last 14d: unq all: 0 0
* notice: prev accum: outdated-unq outdated-all / unq all: 71 115 / 71 115
* notice: next accum: outdated-unq outdated-all / unq all: 71 115 / 71 115
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2026-01-25] / []

2026-02-12T01:10:44Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/21929593114 # 875
* notice: Stats Output Repository: https://github.com/andry81-stats/github-action-extensions--gh-stats/commits?branch=master&time_zone=utc&until=2026-02-12
* notice: last 14d: unq all: 0 0
* notice: prev accum: outdated-unq outdated-all / unq all: 71 115 / 71 115
* notice: next accum: outdated-unq outdated-all / unq all: 71 115 / 71 115
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [] / []

2026-02-11T01:18:06Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/21888963035 # 874
* notice: Stats Output Repository: https://github.com/andry81-stats/github-action-extensions--gh-stats/commits?branch=master&time_zone=utc&until=2026-02-11
* notice: last 14d: unq all: 0 0
* notice: prev accum: outdated-unq outdated-all / unq all: 70 114 / 71 115
* notice: next accum: outdated-unq outdated-all / unq all: 71 115 / 71 115
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2026-01-23 2026-01-24 2026-01-25] / []

2026-02-08T01:27:05Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/21790106635 # 871